--- a/gradle/bootme.gradle
+++ b/gradle/bootme.gradle
@@ -118,7 +118,8 @@ class HaltMePlugin implements Plugin<Project> {
             doLast {
                 def pids = []
                 "jps -v".execute().text.eachLine { line ->
-                    if (line.contains("${project.name}")) {
+                    if(line.contains("project.id=${project.name}")) {
+                        println "halt: ${project.name}\n $line"
                         pids << line.split()[0]
                     }
                 }
