--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,8 +14,6 @@
  * limitations under the License.
  */
 
-version = sorcerVersion
-
 jar {
     manifest {
         attributes("Implementation-Title": "Service Provider",
@@ -90,7 +88,8 @@ artifacts {
 }
 
 def repoPath() {
-    return "org/sorcer/adder/${version}"
+    "${project.group.replace(".", "/")}/adder/${version}"
+    //return "org/sorcer/adder/${version}"
 }
 
 bootme {
@@ -99,8 +98,9 @@ bootme {
     starterConfig = file("${projectDir.path}/configs/StartAdderConfig.groovy")
     systemProperties = ["relative.repo.path" : repoPath(),
                         "java.util.logging.config.file" : "${projectDir.path}/configs/sorcer-prv.logging",
-                        "webster.url" : websterUrl]
-//    spawn = true
+                        "webster.url" : websterUrl,
+                        "project.version" : project.version]
+//    spawn = false
 //    debug = true
 }
 
@@ -131,7 +131,6 @@ test {
     testLogging {
         events "passed", "skipped", "failed"/*, "standardOut", "standardError"*/
     }
-//    dependsOn([install])
     dependsOn([install, bootme])
     finalizedBy(haltme)
 }
