--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -1,4 +1,26 @@
+/*
+ * Copyright to the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
+dependencies {
+	compile "org.sorcer:sorcer-platform:${sorcerVersion}"
+	compile "org.sorcer:sorcer-lib:${sorcerVersion}"
+	compile "org.sorcer:sos-db-prv:${sorcerVersion}"
+	testCompile "org.sorcer:sorcer-test:${sorcerVersion}"
+	testRuntime logRuntime
+}
 
 jar {
 	manifest {
@@ -44,14 +66,6 @@ artifacts {
 install.dependsOn(['workerPrvDlJar', 'workerReqJar'])
 build.dependsOn(install)
 
-dependencies {
-	compile "org.sorcer:sorcer-platform:${sorcerVersion}"
-	compile "org.sorcer:sorcer-lib:${sorcerVersion}"
-	compile "org.sorcer:sos-db-prv:${sorcerVersion}"
-	testCompile "org.sorcer:sorcer-test:${sorcerVersion}"
-	testRuntime logRuntime
-}
-
 def repoPath() {
 	"${project.group.replace(".", "/")}/${project.name}/${version}"
 }
@@ -62,7 +76,7 @@ bootme {
                         "project.dir" : "${project.projectDir.path}",
 						"project.version" : project.version,
 						"webster.url" : websterUrl]
-    spawn = true
+    //spawn = false
 }
 
 test {
@@ -72,7 +86,7 @@ test {
 	testLogging {
 		events "passed", "skipped", "failed"/*, "standardOut", "standardError"*/
 	}
-//	dependsOn([install])
+
 	dependsOn([install, bootme])
 	finalizedBy(haltme)
 }
