--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ apply from: file("${rootDir.path}/gradle/distributions.gradle")
 apply from: file("${rootDir.path}/gradle/projectProperties.gradle")
 apply from: file("${rootDir.path}/gradle/utils.gradle")
 
+tasks.check.dependsOn("bootSorcer")
+
 subprojects {
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
